k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: games-namespace
  labels:
    name: games-namespace
